--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     text-align: center;
     position: relative;
     top: 40px;
+    padding-bottom: 50px;
 }
 .attribution a {
     color: hsl(228, 45%, 44%);
@@ -132,6 +133,82 @@ ul {
     color: var(--Soft-Pink);
 }
 
-@media (max-width: 375px) {
-    
+@media (max-width: 1000px) and (min-width:750px) {
+    .main {
+        width: 95vw;
+    }
+    .stars {
+        flex-direction: column;
+        align-items: center;
+        gap: 5px;
+    }
+    .main-section-comments {
+        height: fit-content;
+    }
+}
+
+@media (max-width: 750px) {
+    body {
+        width: 100vw;
+        height: 100vh;
+        display: block;
+        place-content: center;
+        font-size: 15px;
+        font-family: var(--font);
+    }
+    .main {
+        width: 375px;
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+        color: var(--White);
+        margin: auto;
+    }
+    .main-section {
+        display: flex;
+        gap: 12px;
+        justify-content: space-between;
+        text-align: justify;
+        align-items: center;
+        flex-direction: column;
+    }
+    .main-section-title h1 {
+        margin: 30px 0;
+        text-align: center;
+        color: var(--Very-Dark-Magenta);
+        font-size: 2.7em;
+    }
+    .main-section-title p {
+        text-align: center;
+        width: 90%;
+        display: block;
+        margin: auto;
+        padding-bottom: 10px;
+    }
+    .stars {
+        background-color: var(--Light-Grayish-Magenta);
+        display: flex;
+        padding: 15px;
+        border-radius: 5px;
+        width: 320px;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+    #rated1 {
+        position: relative;
+        right: 0;
+    }
+    #rated2 {
+        position: relative;
+        right: 0;
+    }
+    #comment1 {
+        position: relative;
+        bottom: 0;
+    }
+    #comment2 {
+        position: relative;
+        bottom: 0;
+    }
 }
