--- a/style.css
+++ b/style.css
@@ -33,11 +33,13 @@ body {
     place-content: center;
     font-size: 15px;
     font-family: var(--font);
-    background: url('images/bg-pattern-top-desktop.svg') no-repeat, url('images/bg-pattern-bottom-desktop.svg');
+    background: url('images/bg-pattern-top-desktop.svg') top left no-repeat, url('images/bg-pattern-bottom-desktop.svg') bottom right no-repeat;
 }
 ul {
     list-style: none;
 }
+
+
 
 .main {
     width: 950px;
@@ -60,7 +62,10 @@ ul {
 .main-section-title h1 {
     margin-bottom: 20px;
     text-align: left;
-    color: var(--Very-Dark-Magenta);
+    /*color: var(--Very-Dark-Magenta);*/
+    background: linear-gradient(to right, var(--Very-Dark-Magenta), rgb(221, 162, 213));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     font-size: 2.7em;
 }
 .main-section-rated {
@@ -77,7 +82,7 @@ ul {
     margin: 0 3px;
 }
 .stars {
-    background-color: var(--Light-Grayish-Magenta);
+    background-image: linear-gradient(to right, var(--Light-Grayish-Magenta), transparent);
     display: flex;
     padding: 15px;
     border-radius: 5px;
@@ -93,12 +98,14 @@ ul {
 .main-section-comments {
     display: flex;
     flex-direction: column;
-    background-color: var(--Very-Dark-Magenta);
+    /*background-color: var(--Very-Dark-Magenta);*/
+    background-image: linear-gradient(to right, var(--Very-Dark-Magenta), hsl(300, 31%, 38%));
     padding: 25px;
     height: 150px;
     width: 300px;
     justify-content: center;
     border-radius: 10px;
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.384);
 }
 #comment1 {
     position: relative;
@@ -156,6 +163,8 @@ ul {
         place-content: center;
         font-size: 15px;
         font-family: var(--font);
+        background-image: url(images/bg-pattern-top-mobile.svg), url(images/bg-pattern-bottom-mobile.svg);
+        background-position: top right, bottom left;
     }
     .main {
         width: 375px;
